Error message cleanup in BIRT oda.jdbc project

--- a/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
@@ -4,42 +4,42 @@
 ###########################################################
 
 #ODA-JDBC error code
-odajdbc.CannotCloseConn=Fail to close the connection
+odajdbc.CannotCloseConn=Failed to close the connection
 odajdbc.ConnCommitError=Database access error occurs or Connection object is in auto-commit mode
-odajdbc.CannotGetConnMetaData=Cannot get Connection's metadata
-odajdbc.CannotGetConn=Fail to get Connection
+odajdbc.CannotGetConnMetaData=Cannot get Connection metadata
+odajdbc.CannotGetConn=Failed to get Connection
 odajdbc.ConnRollbackError=Connection rollback error
 
-odajdbc.CannotGetMaxStatements=Can not get the max number of statements from database metadata
-odajdbc.CannotGetMaxConnections=Can not get the max number of connections from database metadata
+odajdbc.CannotGetMaxStatements=Cannot get the max number of statements from database metadata
+odajdbc.CannotGetMaxConnections=Cannot get the max number of connections from database metadata
 
-odajdbc.CannotGetDatabaseMajorVersion=Can not get the database major version
-odajdbc.CannotGetDatabaseMinorVersion=Can not get the database minor version
-odajdbc.CannotGetDataSourceProductName=Can not get the datasource product name
-odajdbc.CannotGetDataSourceProductVersion=Can not get the datasource product version
-odajdbc.CannotGetSQLStateType=Can not get the SQL state type
+odajdbc.CannotGetDatabaseMajorVersion=Cannot get the database major version
+odajdbc.CannotGetDatabaseMinorVersion=Cannot get the database minor version
+odajdbc.CannotGetDataSourceProductName=Cannot get the datasource product name
+odajdbc.CannotGetDataSourceProductVersion=Cannot get the datasource product version
+odajdbc.CannotGetSQLStateType=Cannot get the SQL state type
 
-odajdbc.CannotGetParameterCount=Can not get parameter count
-odajdbc.CannotGetParameterMode=Can not get parameter mode
-odajdbc.CannotGetParameterType=Can not get parameter type
-odajdbc.CannotGetParameterTypeName=Can not get parameter type name
-odajdbc.CannotGetPrecision=Can not get precision
-odajdbc.CannotGetScale=Can not get Scale
-odajdbc.CannotDetermineSupportForNull=Can not determine whether the parameter is nullable
+odajdbc.CannotGetParameterCount=Cannot get parameter count
+odajdbc.CannotGetParameterMode=Cannot get parameter mode
+odajdbc.CannotGetParameterType=Cannot get parameter type
+odajdbc.CannotGetParameterTypeName=Cannot get parameter type name
+odajdbc.CannotGetPrecision=Cannot get precision
+odajdbc.CannotGetScale=Cannot get Scale
+odajdbc.CannotDetermineSupportForNull=Cannot determine whether the parameter is nullable
 
-odajdbc.CannotGetResultSet=Cannot get the resultset
-odajdbc.CannotGetResultSetMetadata=Cannot get the resultset metadata
-odajdbc.CannotCloseResultSet=Cannot close the resultset
-odajdbc.CursorDownError=Cannot move down to the resultset's next
-odajdbc.ResultSetCannotGetStringValue=Cannot get the resultset's string value
-odajdbc.ResultSetCannotGetIntValue=Cannot get the resultset's int value
-odajdbc.ResultSetCannotGetDoubleValue=Cannot get the resultset's double value
-odajdbc.ResultSetCannotGetBigDecimalValue=Cannot get the resultset's bigDecimal value
-odajdbc.ResultSetCannotGetDateValue=Cannot get the resultset's date value
-odajdbc.ResultSetCannotGetTimeValue=Cannot get the resultset's time value
-odajdbc.ResultSetCannotGetTimeStampValue=Cannot get the resultset's time stamp value
-odajdbc.ResultSetDetermineNull=Error occurs when judge whether the resultset last column read has a value of null
-odajdbc.ResultSetCannotFindColumn=ResultSet object does not contain columnName or database access error
+odajdbc.CannotGetResultSet=Cannot get resultset
+odajdbc.CannotGetResultSetMetadata=Cannot get resultset metadata
+odajdbc.CannotCloseResultSet=Cannot close resultset
+odajdbc.CursorDownError=Cannot move down to next row in result set
+odajdbc.ResultSetCannotGetStringValue=Cannot get String value in result set
+odajdbc.ResultSetCannotGetIntValue=Cannot get Integer value in result set
+odajdbc.ResultSetCannotGetDoubleValue=Cannot get Double value in result set
+odajdbc.ResultSetCannotGetBigDecimalValue=Cannot get BigDecimal value in result set
+odajdbc.ResultSetCannotGetDateValue=Cannot get Date value in result set
+odajdbc.ResultSetCannotGetTimeValue=Cannot get Time value in result set
+odajdbc.ResultSetCannotGetTimeStampValue=Cannot get Timestamp value in result set
+odajdbc.ResultSetDetermineNull=Cannot determine isNull value in result set
+odajdbc.ResultSetCannotFindColumn=Cannot found column in result set
 
 odajdbc.CannotGetColumnCount=Cannot get column count
 odajdbc.CannotGetColumnName=Cannot get column name
@@ -49,13 +49,13 @@ odajdbc.CannotGetColumnTypeName=Cannot get column type name
 odajdbc.CannotGetColumnDisplaySize=Cannot get column display size
 odajdbc.CannotGetResultSetMetaDataPrecision=Cannot get resultset metadata precision
 odajdbc.CannotGetResultSetMetaDataScale=Cannot get resultset meatdata scale
-odajdbc.CannotDetermineColumnSupportForNull=Error occurs when judge the nullability status of the given column
+odajdbc.CannotDetermineColumnSupportForNull=Cannot determine if column supports null values
 
-odajdbc.StatementCannotPrepared=Error occurs when prepare the statement
+odajdbc.StatementCannotPrepared=Error preparing SQL statement
 odajdbc.CannotClosePreparedStatement=Cannot close preparedStatement
 odajdbc.CannotGetPreparedStatementMetadata=Cannot get preparedStatement metadata
 odajdbc.ResultSetCannotReturn=SQL statement does not return a ResultSet object
-odajdbc.QueryExecuteFail=SQL statement does not return a ResultSet object or an update count,an error occur.
+odajdbc.QueryExecuteFail=SQL statement does not return a ResultSet object or an update count
 odajdbc.PrepareStatement.CannotSetIntValue=Cannot set preparedStatement parameter int value
 odajdbc.PrepareStatement.CannotSetDoubleValue=Cannot set preparedStatement parameter Double value
 odajdbc.PrepareStatement.CannotSetBigDecimalValue=Cannot set preparedStatement parameter BigDecimal value
@@ -65,15 +65,15 @@ odajdbc.PrepareStatement.CannotSetTimeValue=Cannot set preparedStatement paramet
 odajdbc.PrepareStatement.CannotSetTimestampValue=Cannot set preparedStatement parameter Timestamp value
 odajdbc.PrepareStatement.CannotGetParameterType=Cannot get the paramter type from parameter metadata
 odajdbc.CannotGetParameterMetadata=Cannot retrieve the parameter metadata
-odajdbc.ClearParametersError=Error occurs when clear the current parameter value
+odajdbc.ClearParametersError=Error clearing current parameter value
 
 #used in assert error
-odajdbc.driver.ConnNotOpen=Connection not opened
+odajdbc.driver.ConnNotOpen=Connection is not open
 odajdbc.driver.DriverMissingProperties=Missing properties in Connection.open(Properties)
-odajdbc.driver.ParameterMetadataCannotNull=ParameterMetaData can't be null
-odajdbc.driver.ResultSetCannotNull=ResultSet can't be null
-odajdbc.driver.ResultSetMetadataCannotNull=ResultSetMetaData can't be null
-odajdbc.driver.StatementCannotNull=Statement need to be prepared before this operation
+odajdbc.driver.ParameterMetadataCannotNull=ParameterMetaData cannot be null
+odajdbc.driver.ResultSetCannotNull=ResultSet cannot be null
+odajdbc.driver.ResultSetMetadataCannotNull=ResultSetMetaData cannot be null
+odajdbc.driver.StatementCannotNull=Statement needs to be prepared before this operation
 
 odajdbc.CannotGetMaxQueries=Cannot get MaxStatements from underlying JDBC connection.
 odajdbc.CannotSetQueryTimeout=Cannot set query timeout on underlying JDBC Statement.
