Data Engine Scripting updates

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -117,7 +117,7 @@ odaconsumer.CannotGetConnectionMetaData=Cannot get the connection metadata.
 odaconsumer.CannotGetMaxConnections=Cannot get the maximum number of connections for the data source.
 odaconsumer.CannotGetMaxStatements=Cannot get the maximum number of queries for the data source.
 odaconsumer.CannotGetDataSetMetaData=Cannot get the data set metadata ({0}) from the data source.
-odaconsumer.CannotPrepareStatement=Cannot prepare the query ({0}) for the data set type ({1}).
+odaconsumer.CannotPrepareStatement=Failed to prepare the follwing query for the data set type ({1}). \n[{0}]
 odaconsumer.CannotCloseConnection=Cannot close the connection.
 odaconsumer.CannotOpenConnection=Cannot open the connection for the driver ({0}).
 odaconsumer.CannotDetermineSupportForMultipleOpenResults=Cannot determine the support for multiple open results.
