Fix wrong javascript constant name from "SQRT_2" to "SQRT2".

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -817,8 +817,8 @@ Class.Math.PI=PI
 Class.Math.PI.toolTip=The number value for PI, the ratio of the circumference of a circle to its diameter, which is approximately 3.1415926535897932
 Class.Math.SQRT1_2=SQRT1_2
 Class.Math.SQRT1_2.toolTip=The number value for the square root of 1/2, which is approximately 0.7071067811865476
-Class.Math.SQRT_2=SQRT_2
-Class.Math.SQRT_2.toolTip=The number value for the square root of 2, which is approximately 1.4142135623730951
+Class.Math.SQRT2=SQRT2
+Class.Math.SQRT2.toolTip=The number value for the square root of 2, which is approximately 1.4142135623730951
 Class.Math.abs=abs
 Class.Math.abs.toolTip=Returns the absolute value
 Class.Math.acos=acos
