Correct the wrong method name

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -893,8 +893,8 @@ Class.Number.NEGATIVE_INFINITY=NEGATIVE_INFINITY
 Class.Number.NEGATIVE_INFINITY.toolTip=Returns a value more negative than the largest negative number (-Number.MAX_VALUE) representable in JScript
 Class.Number.POSITIVE_INFINITY=POSITIVE_INFINITY
 Class.Number.POSITIVE_INFINITY.toolTip=Returns a value larger than the largest number (Number.MAX_VALUE) that can be represented in JScript
-Class.Number.getExponential=getExponential
-Class.Number.getExponential.toolTip=Returns a string containing a number represented in exponential notation
+Class.Number.toExponential=toExponential
+Class.Number.toExponential.toolTip=Returns a string containing a number represented in exponential notation
 Class.Number.toFixed=toFixed
 Class.Number.toFixed.toolTip=Returns a string representing a number in fixed-point notation
 Class.Number.toLocaleString=toLocaleString
