Remove the unsupported style selectoers

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -549,8 +549,8 @@ Class.Global.NaN=NaN
 Class.Global.NaN.toolTip=The initial value is not a number
 Class.Global.Infinity=Infinity
 Class.Global.Infinity.toolTip=Returns the value of Number.POSITIVE_INFINITY (a value larger than the largest number (Number.MAX_VALUE) that can be represented in JScript)
-Class.Global.Undefined=underfined
-Class.Global.Undefined.toolTip=The initial value is undefined
+Class.Global.undefined=undefined
+Class.Global.undefined.toolTip=The initial value is undefined
 Class.Global.decodeURI=decodeURI
 Class.Global.decodeURI.toolTip=Returns the unencoded version of an encoded Uniform Resource Identifier (URI)
 Class.Global.decodeURIComponent=decodeURIComponent
