Fix the JS birt object bugs

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1023,7 +1023,7 @@ Class.Dimension=Dimension Class
 Class.Dimension.toolTip=The dimension property object handles parsing of a CSS dimension property
 Class.Dimension.value=value
 Class.Dimension.value.toolTip=Returns the CSS-compatible dimension value
-Class.Dimension.measure=value
+Class.Dimension.measure=measure
 Class.Dimension.measure.toolTip=Gets the measure portion of a dimension, or null if the dimension is defined using a constant
 Class.Dimension.units=units
 Class.Dimension.units.toolTip=Gets the units portion of a dimension, or null if the dimension is defined using a constant
