BIRT JDBC Data Source wizard not displaying drivers defined in extension

--- a/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
@@ -78,3 +78,5 @@ odajdbc.driver.StatementCannotNull=Statement needs to be prepared before this op
 odajdbc.CannotGetMaxQueries=Cannot get MaxStatements from underlying JDBC connection.
 odajdbc.CannotSetQueryTimeout=Cannot set query timeout on underlying JDBC Statement.
 odajdbc.BadQueryProperty=Query property {0} is not supported.
+odajdbc.CannotLoadDriverClass=Cannot load JDBC Driver class: [{0}]. 
+odajdbc.CannotInstantiateDriverClass=Cannot instantiate JDBC Driver class: [{0}].
