- Summary: Minor Display changes  in Parameter Edit Dialog, Code Layout and Table Group Dialog
-SCR Involved: 74052 (Regression), 79085

- Description:

- Regression ( Yes/No ):

- Code Owner: Nina Li

- Code Reviewers:

- Tests: Yes

- Tests Automated (Yes/No, if "No", then explain why): No, GUI Features

- Case Entries Resolved:

- Notes to Developers:

- Notes to QA:

- Notes to Documentation:

- Notes to Configuration Management:

- Notes to Support:

- Notes to Product Marketing:

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2053,7 +2053,7 @@ Element.ListingGroup.groupName=Name
 Element.ListingGroup.intervalBase=Interval Base
 Element.ListingGroup.interval=Interval
 Element.ListingGroup.intervalRange=Interval range
-Element.ListingGroup.sortDirection=Sort direction
+Element.ListingGroup.sortDirection=Sort Direction
 Element.ListingGroup.pageBreakBefore=Page break before
 Element.ListingGroup.pageBreakAfter=Page break after
 Element.ListingGroup.filter=Filter
