Update the js object

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -968,8 +968,8 @@ Class.ElementDefn=ElementDefn Class
 Class.ElementDefn.toolTip=Provides design information for a report element
 Class.ElementDefn.name=name
 Class.ElementDefn.name.toolTip=Provides the name of the element
-Class.ElementDefn.extends=extends
-Class.ElementDefn.extends.toolTip=Provides the name of the parent element that this element extends
+Class.ElementDefn.extendsElement=extendsElement
+Class.ElementDefn.extendsElement.toolTip=Provides the name of the parent element that this element extends
 Class.ElementDefn.propertyDefns=propertyDefns
 Class.ElementDefn.propertyDefns.toolTip=An array of property definitions 
 Class.ElementDefn.slotDefns=slotDefns
@@ -1110,18 +1110,18 @@ Class.DataSet.row=row
 Class.DataSet.row.toolTip=Represents the current inner-most row
 Class.DataSet.rows=rows
 Class.DataSet.rows.toolTip=Allows access to rows within this hierarchy
-Class.DataSet.command=command
-Class.DataSet.command.toolTip=Provides the query text to be sent to the ODA data source
-Class.DataSet.columns=columns
-Class.DataSet.columns.toolTip=An array of column definitions
+Class.DataSet.queryText=queryText
+Class.DataSet.queryText.toolTip=Provides the query text to be sent to the ODA data source
+Class.DataSet.columnDefns=columnDefns
+Class.DataSet.columnDefns.toolTip=An array of column definitions
 Class.DataSet.schema=schema
 Class.DataSet.schema.toolTip=A DataSetParamMetadata object that provides schema information about an ODA data source
 Class.DataSet.inputParams=inputParams
 Class.DataSet.inputParams.toolTip=Provides access to the value of input parameters as an array of parameters 
 Class.DataSet.outputParams=outputParams
 Class.DataSet.outputParams.toolTip=An array of output parameter values for a data set
-Class.DataSet.publicProperties=publicProperties
-Class.DataSet.publicProperties.toolTip=Provides the ODA public properties for an ODA data set
+Class.DataSet.extensionProperties=extensionProperties
+Class.DataSet.extensionProperties.toolTip=Provides the ODA public properties for an ODA data set
 Class.DataSet.privateProperties=privateProperties
 Class.DataSet.privateProperties.toolTip=Provides the private properties for an ODA data set
 
@@ -1143,7 +1143,8 @@ Class.DataRow.dataSet=dataSet
 Class.DataRow.dataSet.toolTip=Returns the DataSet object that created the row
 Class.DataRow.schema=schema
 Class.DataRow.schema.toolTip=Returns an array of column descriptions for the data row
-
+Class.DataRow.columnDefns=columnDefns
+Class.DataRow.columnDefns.toolTip=It is an array of ColumnDefn that defines the column metadata. It is a shortcut to dataSet.columnDefns.
 
 #19. ColumnDefn
 
