Add the DataSource JS object on ROM.def

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1124,7 +1124,8 @@ Class.DataSet.extensionProperties=extensionProperties
 Class.DataSet.extensionProperties.toolTip=Provides the ODA public properties for an ODA data set
 Class.DataSet.privateProperties=privateProperties
 Class.DataSet.privateProperties.toolTip=Provides the private properties for an ODA data set
-
+Class.DataSet.DataSource=DataSource
+Class.DataSet.DataSource.toolTip=Returns the DataSource object used by this data set.
 
 
 #18. DataRow
@@ -1549,6 +1550,18 @@ Class.GlobalBirt.config=Birt Config
 Class.GlobalBirt.config.toolTip=Returns an array of configuration variables available to the report. Represented as a name/value pair
 Class.GlobalBirt.report=Birt Report
 Class.GlobalBirt.report.toolTip=Provides access to all information about the report and the context in which the report is running
+
+#30 DataSource
+
+Class.DataSource=DataSource Class
+Class.DataSource.toolTip=The data source class provides access to the Factory-time state of data source. The DataSource object can be accessed via the DataSet object that uses it.
+Class.DataSource.extensionID=extensionID
+Class.DataSource.extensionID.toolTip=Returns the value of the extensionID of the ODA data source, as defined by the ODA driver extension. The extensionID uniquely identifies a type of data source in the BIRT environement. This property cannot be updated.
+Class.DataSource.isOpen=isOpen
+Class.DataSource.isOpen.toolTip=Returns a Boolean value indicating whether the data source is connected
+Class.DataSource.extensionProperties=extensionProperties
+Class.DataSource.extensionProperties.toolTip=Provides the private properties for an ODA data source
+
 
 ###########################################################
 # Structures
