Enhanced driverinfo extension point to allow external connection providers

--- a/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
@@ -79,4 +79,5 @@ odajdbc.CannotGetMaxQueries=Cannot get MaxStatements from underlying JDBC connec
 odajdbc.CannotSetQueryTimeout=Cannot set query timeout on underlying JDBC Statement.
 odajdbc.BadQueryProperty=Query property {0} is not supported.
 odajdbc.CannotLoadDriverClass=Cannot load JDBC Driver class: [{0}]. 
-odajdbc.CannotInstantiateDriverClass=Cannot instantiate JDBC Driver class: [{0}].
+odajdbc.CannotInstantiateDriverClass=Cannot create instance of JDBC Driver class: [{0}].
+odajdbc.CannotInstantiateFactory=Cannot create instance of connection factory class [{0}] defined in the extension for driver class [{1}].
