Fixed bugs in JavaScript methods.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -659,8 +659,8 @@ Class.Date.getFullYear=getFullYear
 Class.Date.getFullYear.toolTip=Returns the year value in the Date object using local time
 Class.Date.getHours=getHours
 Class.Date.getHours.toolTip=Returns the hours value in a Date object using local time
-Class.Date.getMilliSeconds=getMilliSeconds
-Class.Date.getMilliSeconds.toolTip=Returns the milliseconds value in a Date object using local time
+Class.Date.getmilliSeconds=getmilliSeconds
+Class.Date.getmilliSeconds.toolTip=Returns the milliseconds value in a Date object using local time
 Class.Date.getMinutes=getMinutes
 Class.Date.getMinutes.toolTip=Returns the minute value in the Date object using local time
 Class.Date.getMonth=getMonth
@@ -669,8 +669,8 @@ Class.Date.getSeconds=getSeconds
 Class.Date.getSeconds.toolTip=Returns the seconds value in a Date object using local time
 Class.Date.getTime=getTime
 Class.Date.getTime.toolTip=Returns the time value in a Date object
-Class.Date.getTimeZoneOffset=getTimeZoneOffset
-Class.Date.getTimeZoneOffset.toolTip=Returns the difference between local time and UTC time in minutes
+Class.Date.getTimezoneOffset=getTimezoneOffset
+Class.Date.getTimezoneOffset.toolTip=Returns the difference between local time and UTC time in minutes
 Class.Date.getUTCDate=getUTCDate
 Class.Date.getUTCDate.toolTip=Returns the date in a Date object using Coordinated Universal Time (UTC)
 Class.Date.getUTCDay=getUTCDay
@@ -2080,7 +2080,7 @@ Element.ListingGroup.onFinish.toolTip=Called after the last row is read from the
   
 #16.List  ( prefix  Element.List )
 Element.List.slot.header=header
-Element.List.slot.group=groups
+Element.List.slot.groups=groups
 Element.List.slot.detail=detail
 Element.List.slot.footer=footer
   
@@ -2093,7 +2093,7 @@ Element.Table.caption=Caption
 Element.Table.captionID=Caption key
 Element.Table.repeatHeader=Repeat header
 Element.Table.slot.header=header
-Element.Table.slot.group=groups
+Element.Table.slot.groups=groups
 Element.Table.slot.detail=detail
 Element.Table.slot.footer=footer
 Element.Table.slot.columns=columns
@@ -2111,7 +2111,7 @@ Element.Column.alignment=Alignment
 Element.Row.visibility=Visibility
 Element.Row.height=Height
 Element.Row.bookmark=Bookmark
-Element.Row.slot.cell=Cells
+Element.Row.slot.cells=Cells
   
 #22.Cell  ( prefix  Element.Cell )
 Element.Cell.column=Column
