Update name of the getMilliseconds() method.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -659,8 +659,8 @@ Class.Date.getFullYear=getFullYear
 Class.Date.getFullYear.toolTip=Returns the year value in the Date object using local time
 Class.Date.getHours=getHours
 Class.Date.getHours.toolTip=Returns the hours value in a Date object using local time
-Class.Date.getmilliSeconds=getmilliSeconds
-Class.Date.getmilliSeconds.toolTip=Returns the milliseconds value in a Date object using local time
+Class.Date.getMilliseconds=getMilliseconds
+Class.Date.getMilliseconds.toolTip=Returns the milliseconds value in a Date object using local time
 Class.Date.getMinutes=getMinutes
 Class.Date.getMinutes.toolTip=Returns the minute value in the Date object using local time
 Class.Date.getMonth=getMonth
