Action property rename

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1736,13 +1736,11 @@ Structure.ExtendedProperty.value=Value
 Structure.Action.linkType=Link type
 Structure.Action.targetWindow=Target
 Structure.Action.linkExpr=Link Expression
-Structure.Action.hyperlink=Location
-Structure.Action.bookmarkLink=Bookmark link
-Structure.Action.drillThroughReportName=Report Name
-Structure.Action.drillThroughParamBindings=Parameter Bindings
-Structure.Action.drillThroughType=Drillthrough Type
-Structure.Action.drillThroughBookmarkLink=Drillthrough Bookmark Link
-Structure.Action.drillThroughSearch=Search Keys
+Structure.Action.uri=Location
+Structure.Action.targetBookmark=Bookmark link
+Structure.Action.reportName=Report Name
+Structure.Action.paramBindings=Parameter Bindings
+Structure.Action.search=Search Keys
 
 #18. CachedMetaData
 Structure.CachedMetaData.parameters=Parameters
