Add property group "Interval" on listingGroup element.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2062,7 +2062,8 @@ Element.ListingGroup.keyExpr=Key expression
 Element.ListingGroup.sort=Sort
 Element.ListingGroup.toc=TOC
 Element.ListingGroup.groupName=Name
-Element.ListingGroup.intervalBase=Interval Base
+Element.ListingGroup.Interval=Interval
+Element.ListingGroup.intervalBase=Interval base
 Element.ListingGroup.interval=Interval
 Element.ListingGroup.intervalRange=Interval range
 Element.ListingGroup.sortDirection=Sort Direction
