--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1937,8 +1937,6 @@ Element.MasterPage.topMargin=Top margin
 Element.MasterPage.leftMargin=Left margin
 Element.MasterPage.bottomMargin=Bottom margin
 Element.MasterPage.rightMargin=Right margin
-Element.MasterPage.headerHeight=Header height
-Element.MasterPage.footerHeight=Footer height
 Element.MasterPage.slot.contents=Contents
 
 #9. Style ( Prefix = Element.Style)
@@ -2195,6 +2193,8 @@ Element.GraphicMasterPage.slot.contents=Content
 #34 SimpleMasterPage ( Prefix Element.SimpleMasterPage)
 Element.SimpleMasterPage.showHeaderOnFirst=Show header on first page
 Element.SimpleMasterPage.showFooterOnLast=Show footer on last page
+Element.SimpleMasterPage.headerHeight=Header height
+Element.SimpleMasterPage.footerHeight=Footer height
 Element.SimpleMasterPage.floatingFooter=Floating footer
 Element.SimpleMasterPage.slot.pageHeader=Page Header
 Element.SimpleMasterPage.slot.pageFooter=Page Footer
