Add validate in parameter element.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1899,6 +1899,8 @@ Element.JdbcSelectDataSet.getStatement.toolTip=Returns a customized SQL statemen
 Element.Parameter.helpText=Help text
 Element.Parameter.helpTextID=Help text Key
 Element.Parameter.hidden=Hidden
+Element.Parameter.validate=Validation
+Element.Parameter.validate.toolTip=Returns true or false for the custom validation of the parameter
   
 #7. ScalarParameter  ( prefix  Element.ScalarParameter )
 Element.ScalarParameter.dataType=Data type
