--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2537,7 +2537,8 @@ Error.SemanticError.MISSING_EXTENSION=The extension name of element "{0}" must b
 Error.SemanticError.PROPERTY_COPY_FORBIDDEN=To copy property "{0}" is forbidden.
 Error.SemanticError.COLUMN_COPY_FORBIDDEN=The copy operation on the column "{0}"  of the element "{1}" is forbidden.
 Error.SemanticError.COLUMN_PASTE_FORBIDDEN=The paste operation on the element "{1}" is forbidden.
-Error.SemanticError.COLUMN_PASTE_DIFFERENT_LAYOUT=The paste area has the different layout with the copied area..
+Error.SemanticError.COLUMN_PASTE_DIFFERENT_LAYOUT=The paste area has the different layout with the copied area.
+Error.SemanticError.INVALID_STRUCTURE_REF=The element "{0}" has property "{1}" that refers an undefined structure "{2}"
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
