Change the highlight rule and map rule schema

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1593,16 +1593,18 @@ Structure.DateTimeFormatValue=Date Time Format Value
 Structure.UserMethod=User Method
 
 #0.MapRule
-Structure.MapRule.operator=operator
-Structure.MapRule.value1=value1
-Structure.MapRule.value2=value2
-Structure.MapRule.display=display
-Structure.MapRule.displayID=displayID
+Structure.MapRule.testExpr=TestExpression
+Structure.MapRule.operator=Operator
+Structure.MapRule.value1=Value1
+Structure.MapRule.value2=Value2
+Structure.MapRule.display=Display
+Structure.MapRule.displayID=DisplayID
   
 #1.HighlightRule
 Structure.HighlightRule.operator=Operator
 Structure.HighlightRule.value1=Value 1
 Structure.HighlightRule.value2=Value 2
+Structure.HighlightRule.testExpr = TestExpression
 Structure.HighlightRule.strikethrough=Strikethrough
 Structure.HighlightRule.border.top.style=Style
 Structure.HighlightRule.border.top.width=Width
@@ -1992,7 +1994,6 @@ Element.Style.highlight.rules=Highlight rules
 Element.Style.letterSpacing=Letter spacing
 Element.Style.lineHeight=Line height
 Element.Style.map.rules=Map rules
-Element.Style.map.testExpr=Map test expression
 Element.Style.margin.top=Margin top
 Element.Style.margin.bottom=Margin bottom
 Element.Style.margin.left=Margin left
