Re-organize all the model exceptions and add platform initialization with the change of core framework structure.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2473,8 +2473,6 @@ Error.NameException.NAME_REQUIRED=The name of {0} is required.
 Error.NameException.NAME_FORBIDDEN=The {0} is not allowed to have name.
 Error.NameException.DUPLICATE=The name "{0}" duplicates an existing name. Please choose a different name.
 Error.NameException.HAS_REFERENCES=The {0} has derived element, the name cannot be cleared.
-Error.NameException.MEMBER_NOT_FOUND=Member:{0} does not resolve to the member of a structure
-
     
 #PropertyNameException
 Error.PropertyNameException.PROPERTY_NOT_VALID=The property "{0}" is invalid for element "{1}".
@@ -2499,13 +2497,10 @@ Error.PropertyValueException.EXTENSION_SETTING_FORBIDDEN=The property "{0}" of E
 
     
 #SemanticError
-Error.SemanticError.INVALID_COL_SPAN=The column span in the table "{0}" must be larger than or equals 1.
-Error.SemanticError.INVALID_ROW_SPAN=The row span in the table "{0}" must be larger than or equals 1.
 Error.SemanticError.INCONSITENT_TABLE_COL_COUNT=The table "{0}" has inconsistent column count.
 Error.SemanticError.INCONSITENT_TABLE_COL_COUNT_COZ_DROP=The table "{0}" has inconsistent column count becuase of drop properties of some cells in group header.
 Error.SemanticError.INCONSITENT_GRID_COL_COUNT=The grid "{0}" has inconsistent column count.
-Error.SemanticError.OVERLAPPING_TABLE_CELLS=The table "{0}" has overlapping cells.
-Error.SemanticError.OVERLAPPING_GRID_CELLS=The grid "{0}" has overlapping cells.
+Error.SemanticError.OVERLAPPING_CELLS=The row in {0} has overlapping cells.
 Error.SemanticError.INCONSITENT_TABLE_DROP_HEADINGS=The table "{0}" has invalid drop headings defined.
 Error.SemanticError.INVALID_PAGE_SIZE=The master page "{0}" has invalid page size.
 Error.SemanticError.MISSING_PAGE_SIZE=The size of the master page "{0}" is required since the page type is custom.
@@ -2539,7 +2534,7 @@ Error.SemanticError.PROPERTY_COPY_FORBIDDEN=To copy property "{0}" is forbidden.
 Error.SemanticError.COLUMN_COPY_FORBIDDEN=The copy operation on the column "{0}"  of the element "{1}" is forbidden.
 Error.SemanticError.COLUMN_PASTE_FORBIDDEN=The paste operation on the element "{1}" is forbidden.
 Error.SemanticError.COLUMN_PASTE_DIFFERENT_LAYOUT=The paste area has the different layout with the copied area.
-Error.SemanticError.INVALID_STRUCTURE_REF=The element "{0}" has property "{1}" that refers an undefined structure "{2}"
+Error.SemanticError.INVALID_STRUCTURE_REF=The element "{0}" has property "{1}" that refers an undefined structure "{2}".
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
@@ -2559,12 +2554,8 @@ Error.DesignParserException.ACTION_PARAMETER_NAME_REQUIRED=The rarameter name is
 Error.DesignParserException.CHOICE_RESTRICTION_VIOLATION=The choice restriction is vialated.
 Error.DesignParserException.MESSAGE_KEY_REQUIRED=The user-defined message must specify the "key" value.
 Error.DesignParserException.DUPLICATE_TRANSLATION_LOCALE=Two translations with the same locale appeare in a user-defined message.
-Error.DesignParserException.METHOD_NAME_REQUIRED=The method name is required.
-Error.DesignParserException.QUERY_CONFLICT=The extended data set has conflict query.
 Error.DesignParserException.NAME_REQUIRED=The element property name or structure member name is required.
-Error.DesignParserException.WRONG_EXPRESSION_TYPE=No such an element property or structure member is expression type.
 Error.DesignParserException.WRONG_STRUCTURE_LIST_TYPE=No such an element property or structure member is structure list type.
-Error.DesignParserException.WRONG_XML_TYPE=No such an element property or structure member is xml type.
 Error.DesignParserException.WRONG_EXTENDED_PROPERTY_TYPE=The property is not an extended property.
 Error.DesignParserException.INVALID_STRUCTURE_NAME=The name is not a structure name.
 Error.DesignParserException.INVALID_PROPERTY_SYNTAX=The property must be defined as attribute of element.
