Add row[0] support as group expression. And fix a bug in row[col_index] expression used in sort.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -80,6 +80,7 @@ data.engine.ScriptEvalError=Error evaluating script (source:{0}, line:{1}):  {2}
 data.engine.PreparedQueryClosed=PreparedQuery instance is closed.
 data.engine.NullDefaultInParamValue=Default value for input parameter cannot be null.
 data.engine.BadGroupKeyExpr=Group key expression {0} is not valid.
+data.engine.BadSortKeyExpr=Sort key expression {0} is not valid.
 data.engine.NoParamMetaForDataSource=Cannot get parameter metadata for this type of data source.
 data.engine.UnexpectedError=Data engine operation failed due to an unexpected exception. 
 data.engine.JSScriptInvalid=Invalid Javascript expression. Source: {1}, line: {2}, Expression:\n{0}\nScript engine error: {3}
