--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -60,6 +60,8 @@ data.engine.BadFetchScriptReturnType=Fetch script for scripted data set must ret
 data.engine.BadIntervalUnit=Invalid Interval unit value: {0}
 data.engine.InvalidFieldName=Invalid field name: {0}
 data.engine.BadGroupKeyType=Group key has unsupported data type: {0}
+data.engine.group.interval=Set a {0} interval on a column with type {1} is not supported
+data.engine.group.interval.Rowid=Except numeric interval, any other interval type is not supported on rowId column
 data.engine.NoSupportFilterOnGroup=Filtering on groups is not current supported.
 
 data.engine.BadAggrFuncParam=Illegal parameter for aggregate function {0}
