Refactor for IFileLocator and DesignFileException.FILE_NOT_FOUND

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2542,6 +2542,7 @@ Error.StyleException.NOT_FOUND=The style "{0}" used by {1} "{2}" is not found.
     
     
 #DesignParserException
+Error.DesignParserException.FILE_NOT_FOUND=The file "{0}" is not found.
 Error.DesignParserException.RGB_REQUIRED=A custom color must have a correct RGB value.
 Error.DesignParserException.COLOR_NAME_REQUIRED=A custom color must have a color name.
 Error.DesignParserException.ILLEGAL_EXTENDS=The element can not be extended.
@@ -2566,7 +2567,6 @@ Error.DesignParserException.UNSUPPORTED_VERSION=The report file of version "{0}"
 Error.DesignParserException.INVALID_VERSION=The report version "{0}" is invalid.
 
 #DesignFileException
-Error.DesignFileException.FILE_NOT_FOUND=The file "{0}" is not found.
 Error.DesignFileException.SYNTAX_ERROR=Syntax error found, and see error details.
 Error.DesignFileException.SEMANTIC_WARNING=Semantic warning found, and see warning details.
 Error.DesignFileException.SEMANTIC_ERROR=Semantic error found, and see error details.
