Fix bugzilla bug 104204    [SPM]Test connection fail when try to connect birt derby sample db

--- a/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
@@ -18,6 +18,8 @@ odajdbc.CannotGetDatabaseMinorVersion=Cannot get the database minor version
 odajdbc.CannotGetDataSourceProductName=Cannot get the datasource product name
 odajdbc.CannotGetDataSourceProductVersion=Cannot get the datasource product version
 odajdbc.CannotGetSQLStateType=Cannot get the SQL state type
+odajdbc.CannotParseURL=The selected driver cannot parse the given url.
+odajdbc.NoSuitableDriver=No suitable driver.
 
 odajdbc.CannotGetParameterCount=Cannot get parameter count
 odajdbc.CannotGetParameterMode=Cannot get parameter mode
