Revert the latest check in.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2510,7 +2510,7 @@ Error.SemanticError.MISSING_MASTER_PAGE=The report must have at least one master
 Error.SemanticError.INVALID_MULTI_COLUMN=The master page "{0}" has the columns spaning outside the page content.
 Error.SemanticError.INVALID_ELEMENT_REF=The element "{0}" has property "{1}" that refers an undefined element "{2}".
 Error.SemanticError.MISSING_SQL_STMT=The JDBC select data set "{0}" must have SQL statement.
-Error.SemanticError.MISSING_DATA_SET={0} must be able to access one data set.
+Error.SemanticError.MISSING_DATA_SET=The list/table "{0}" must be able to access one data set.
 Error.SemanticError.INVALID_IMAGE_SCALE_VALUE=The scale value of the image "{0}" must be positive.
 Error.SemanticError.IMAGE_FILE_NOT_FOUND=The file "{0}" defined in the image "{1}" is not found.
 Error.SemanticError.NEGATIVE_REPORT_REFRESH_RATE=The refresh rate of report must be non-negative value.
