Refactor for StructureHandle and element identifier

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2079,28 +2079,28 @@ Element.ListingGroup.onFinish=On finish
 Element.ListingGroup.onFinish.toolTip=Called after the last row is read from the data set for this element, but before the footer band is created
   
 #16.List  ( prefix  Element.List )
-Element.List.slot.header=header
-Element.List.slot.groups=groups
-Element.List.slot.detail=detail
-Element.List.slot.footer=footer
+Element.List.slot.header=Header
+Element.List.slot.groups=Groups
+Element.List.slot.detail=Detail
+Element.List.slot.footer=Footer
   
 #17.ListGroup  ( prefix  Element.ListGroup )
-Element.ListGroup.slot.header=header
-Element.ListGroup.slot.footer=footer
+Element.ListGroup.slot.header=Header
+Element.ListGroup.slot.footer=Footer
   
 #18.Table  ( prefix  Element.Table )
 Element.Table.caption=Caption
 Element.Table.captionID=Caption key
 Element.Table.repeatHeader=Repeat header
-Element.Table.slot.header=header
-Element.Table.slot.groups=groups
-Element.Table.slot.detail=detail
-Element.Table.slot.footer=footer
-Element.Table.slot.columns=columns
+Element.Table.slot.header=Header
+Element.Table.slot.groups=Groups
+Element.Table.slot.detail=Detail
+Element.Table.slot.footer=Footer
+Element.Table.slot.columns=Columns
   
 #19.TableGroup  ( prefix  Element.TableGroup )
-Element.TableGroup.slot.header=header
-Element.TableGroup.slot.footer=footer
+Element.TableGroup.slot.header=Header
+Element.TableGroup.slot.footer=Footer
   
 #20.Column  ( prefix  Element.Column )
 Element.Column.repeat=Repeat
@@ -2138,8 +2138,8 @@ Element.Image.typeExpr=Type exprssion
 Element.Image.action=Action
   
 #24.Grid  ( prefix  Element.Grid )
-Element.Grid.slot.columns=columns
-Element.Grid.slot.rows=rows
+Element.Grid.slot.columns=Columns
+Element.Grid.slot.rows=Rows
   
 #25.Line  ( prefix  Element.Line )
 Element.Line.orientation=Orientation
@@ -2538,7 +2538,7 @@ Error.SemanticError.INVALID_STRUCTURE_REF=The element "{0}" has property "{1}" t
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
-Error.StyleException.NOT_FOUND=The style "{0}" used by {1} "{2}" is not found.
+Error.StyleException.NOT_FOUND=The style "{0}" used by {1} is not found.
     
     
 #DesignParserException
